// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: MoreOrLess toggle: closed 1`] = `
<div>
  <div
    class="more-or-less more-or-less-closed"
  >
    <h1>
      1
    </h1>
    <h1>
      2
    </h1>
    <h1>
      3
    </h1>
    <div
      class="more-or-less-link"
      role="button"
    >
      Show 3 more
    </div>
  </div>
</div>
`;

exports[`Component: MoreOrLess toggle: open 1`] = `
<div>
  <div
    class="more-or-less more-or-less-opened"
  >
    <h1>
      1
    </h1>
    <h1>
      2
    </h1>
    <h1>
      3
    </h1>
    <h1>
      4
    </h1>
    <h1>
      5
    </h1>
    <h1>
      6
    </h1>
    <div
      class="more-or-less-link"
      role="button"
    >
      Show less
    </div>
  </div>
</div>
`;

exports[`Component: MoreOrLess ui closed 1`] = `
<div>
  <div
    class="more-or-less more-or-less-closed"
  >
    <h1>
      1
    </h1>
    <h1>
      2
    </h1>
    <h1>
      3
    </h1>
    <div
      class="more-or-less-link"
      role="button"
    >
      Show 3 more
    </div>
  </div>
</div>
`;

exports[`Component: MoreOrLess ui open 1`] = `
<div>
  <div
    class="more-or-less more-or-less-opened"
  >
    <h1>
      1
    </h1>
    <h1>
      2
    </h1>
    <h1>
      3
    </h1>
    <h1>
      4
    </h1>
    <h1>
      5
    </h1>
    <h1>
      6
    </h1>
    <div
      class="more-or-less-link"
      role="button"
    >
      Show less
    </div>
  </div>
</div>
`;
